# saml-idp-exploration

./: .dockerignore  .env_example  .gitignore  CLAUDE.md  Cargo.toml  README.md  users.yaml
.devcontainer/: devcontainer.json
src/: cert_util.rs  config.rs  main.rs
src/handlers/: landing.rs  metadata.rs  mod.rs  response_builder.rs  sso.rs
src/models/: mod.rs  request.rs  state.rs  user.rs
